--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,29 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
+/* Custom styling for ticks */
+.custom-ticks {
+    list-style-type: none;
+    padding: 0;
+}
+
+.custom-ticks li {
+    position: relative;
+    padding-left: 25px; /* Space for the tick */
+    margin-bottom: 10px;
+	text-align: justify; /* Justify the text */
+
+}
+
+.custom-ticks li:before {
+    content: "\2713"; /* Unicode character for a check mark */
+    font-size: 1.2em; /* Size of the tick */
+    position: absolute;
+    left: 0;
+    top: 30%;
+    transform: translateY(-50%);
+}
+
 
 /* Basic */
 
@@ -2685,7 +2708,7 @@ input, select, textarea {
 		display: flex;
 		cursor: default;
 		list-style: none;
-		margin-left: -1rem;
+		margin-left: 10rem;
 		padding-left: 0;
 	}
 
@@ -2854,7 +2877,9 @@ input, select, textarea {
 
 		ul li {
 			padding-left: 0.5rem;
+			content: "\2713";
 		}
+	
 
 		ul.divided {
 			list-style: none;
@@ -3283,6 +3308,73 @@ input, select, textarea {
 
 /* Intro */
 
+/* Style for the split intro section */
+#intro {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+}
+
+/* Style for the profile image */
+.profile-image {
+    width: 30%;
+}
+
+.profile-image img {
+    width: 100%;
+    border-radius: 95%; /* Optional: Add a border-radius for a circular profile image */
+}
+
+/* Style for the text on the right side */
+.intro-text {
+    width: 62%;
+}
+
+.intro-text h1 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+.intro-text p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+	color: #ffffff;
+}
+
+/* Style for the "Continue" button */
+/* Style for the "Continue" button */
+.actions {
+    margin-top: auto; /* Move the button to the bottom */
+    align-self: flex-end; /* Align the button to the right */
+}
+
+.actions a.button {
+    font-size: 1.2em;
+    padding: 10px 20px;
+    align-self: flex-end; /* Align the button to the right */
+}
+
+/* Optional: Add responsive styles */
+@media screen and (max-width: 768px) {
+    #intro {
+        flex-direction: column;
+        text-align: center;
+        padding: 30px;
+    }
+
+    .profile-image,
+    .intro-text {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .actions {
+        align-self: center; /* Center the button on smaller screens */
+    }
+}
+/*
+
 	#intro {
 		color: #ffffff;
 		padding: 8rem 4rem 6rem 4rem ;
@@ -3312,7 +3404,7 @@ input, select, textarea {
 		z-index: 1;
 		min-height: 100vh;
 	}
-
+*/
 		#intro input, #intro select, #intro textarea {
 			color: #ffffff;
 		}
@@ -3440,7 +3532,7 @@ input, select, textarea {
 			transform: translateY(2rem);
 			opacity: 0;
 		}
-
+		/*
 			body.is-preload #intro:not(.hidden) + #header + #nav {
 				-moz-transform: translateY(4rem);
 				-webkit-transform: translateY(4rem);
@@ -3489,7 +3581,7 @@ input, select, textarea {
 				}
 
 		}
-
+*/
 /* Header */
 
 	#header {
